--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -22,23 +22,81 @@
 .buttonsearch{
    display: flex;
    justify-content: center;
+   width: 375px;
+   height: 50px;
+   background-color: #f2f2f2;
+   padding: 20px;
+   
+}
+.button__icon {  
+   
+  border: none;
+  object-fit: cover;
+ 
+  
+   
+   
+}
+.button__text {
+   font-size: 20px;
+   border: 0px;
+   background-color: #f2f2f2;
+   font-weight: bold;
+  padding-left: 10px;
+   
+}
+/****** container reservation ***********/
+.reservation {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+
    
 
 }
-.button__form {
-   width: 375px;
-   height: 50px;
-   
+.reservbutton {
+   background-color: blueviolet;
+   border-radius: 20%;
+
 }
-.button__form--text {
-   font-size: 20px;
-}
+
 /****** container fonctionnement ***********/
 .fonctionnement {
    display: flex;
    flex-direction: column;
 }
 /****** container restaurants ***********/
+.restaurants {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  
+}
+.restaurants__card {
+   
+}
+.restaurants__card img {
+   max-width: 100%;
+   max-height: auto;
+   object-fit: fill;
+   border-top-left-radius: 20px;
+   border-top-right-radius: 20px;
+}
+.restaurants__card .title {
+   margin-top: 0px;
+   margin-left: 0px;
+   margin-bottom: 40px;
+   background-color: white;
+   border-top-left-radius: 0px;
+   border-top-right-radius: 0px;
+   border-bottom-left-radius: 20px;
+   border-bottom-right-radius: 20px;
+   padding: 15px;
+   filter: drop-shadow(0px 0px 010px rgba(0, 0, 0, 0.1));
+   box-sizing: border-box;
+   }
 
 /****** container footer ***********/
 .footer {
