--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,16 @@
+*{
+   font-family:'robbot'
+}
+:root {
+   --violet-color:#9356DC;
+   --main-color-rose:#FF79DA;
+   --main-color:#99E2D0;
+   --font-title:style-font:var(--font-title)shrikhand
+}
 
-
+html {
+   paddind:0px
+}
 .mobilefirst {
    display: flex;
    flex-direction: column;
@@ -56,21 +67,75 @@
 
 }
 .reservbutton {
-   background-color: blueviolet;
-   border-radius: 20%;
+   
+   display: inline-block;
+  padding: 10px 20px;
+  background-color: var(--main-color-rose);
+  border-radius: 33px;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+   width: 322px;
+   height: 72px;
+   font-size: bold;
 
 }
 
 /****** container fonctionnement ***********/
 .fonctionnement {
    display: flex;
+   align-items: center;
    flex-direction: column;
+      gap: 20px;
+      margin-bottom: 30px;
+}
+.fonctionnement form {
+   display: flex;
+   align-items: center;
+   justify-content: flex-start;
+   margin: 0;
+ }
+.fonctionnement .card {
+   display: inline-block;
+   text-align: center;
+   background-color:rgb(243, 239, 239);
+   width: 322px;
+    height: 72px;
+   border-radius: 33px;
+   padding: 10px 20px;
+}
+   .fonctionnnement .title {
+      display: flex;
+   justify-content: flex-start;
+
+   }
+   
+
+.fonction__icon {
+    
+   border: none;
+   
+   
+ 
+  
+   
+
+}
+.button__text {
+   font-size: 20px;
+   border: 0px;
+   background-color: #f2f2f2;
+   
+   font-weight: bold;
+  padding-left: 10px;
+   
 }
 /****** container restaurants ***********/
 .restaurants {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: rgb(204, 204, 204);
   
   
 }
@@ -100,7 +165,11 @@
 
 /****** container footer ***********/
 .footer {
+   font: var(--font-title);
    display: flex;
    flex-direction: column;
    align-items: flex-start;
+   color: white;
+   background-color: rgb(26, 24, 24);
+   padding: 15px;
 }
