--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -27,22 +27,165 @@ h1 {
    font-weight: 700;
    font-size: 24px;
 }
+
 h2 {
    font-size: 24px;
    font-weight: 700;
 }
+
 h3 {
    font-size: 16px;
 }
+
 a {
    text-decoration: none;
    color: black;
 }
+
 p {
    font-weight: 300;
 }
+
 /****** §§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§|||| THE RECURENT ||||§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§ ***********/
 /****** form***********/
+
+
+.loader {
+   width: 100%;
+   height: 100%;
+   visibility: hidden;
+   position: fixed;
+   top: 0;
+   left: 0;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   font-size: 5rem;
+   text-transform: uppercase;
+   background-color: rgb(34, 33, 33);
+   opacity: 0.5;
+   animation: loader-animation 2s;
+}
+
+@keyframes loader-animation {
+   from {
+      visibility: visible;
+   }
+
+   to {
+      visibility: hidden;
+   }
+}
+
+/* spinner attente */
+.lds-spinner {
+   color: official;
+   display: inline-block;
+   width: 100%;
+   height: 100%;
+   visibility: hidden;
+   position: fixed;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   justify-content: center;
+   width: 80px;
+   height: 80px;
+
+}
+
+.lds-spinner div {
+   transform-origin: 50px 80px;
+   animation: lds-spinner 1.2s linear infinite;
+   animation: loader-animation 2s;
+}
+
+.lds-spinner div:after {
+   content: "";
+   display: block;
+   position: absolute;
+   top: 3px;
+   left: 37px;
+   width: 6px;
+   height: 18px;
+   border-radius: 20%;
+   background: #9356DC;
+}
+
+.lds-spinner div:nth-child(1) {
+   transform: rotate(0deg);
+   animation-delay: -1.1s;
+}
+
+.lds-spinner div:nth-child(2) {
+   transform: rotate(30deg);
+   animation-delay: -1s;
+}
+
+.lds-spinner div:nth-child(3) {
+   transform: rotate(60deg);
+   animation-delay: -0.9s;
+}
+
+.lds-spinner div:nth-child(4) {
+   transform: rotate(90deg);
+   animation-delay: -0.8s;
+}
+
+.lds-spinner div:nth-child(5) {
+   transform: rotate(120deg);
+   animation-delay: -0.7s;
+}
+
+.lds-spinner div:nth-child(6) {
+   transform: rotate(150deg);
+   animation-delay: -0.6s;
+}
+
+.lds-spinner div:nth-child(7) {
+   transform: rotate(180deg);
+   animation-delay: -0.5s;
+}
+
+.lds-spinner div:nth-child(8) {
+   transform: rotate(210deg);
+   animation-delay: -0.4s;
+}
+
+.lds-spinner div:nth-child(9) {
+   transform: rotate(240deg);
+   animation-delay: -0.3s;
+}
+
+.lds-spinner div:nth-child(10) {
+   transform: rotate(270deg);
+   animation-delay: -0.2s;
+}
+
+.lds-spinner div:nth-child(11) {
+   transform: rotate(300deg);
+   animation-delay: -0.1s;
+}
+
+.lds-spinner div:nth-child(12) {
+   transform: rotate(330deg);
+   animation-delay: 0s;
+}
+
+@keyframes lds-spinner {
+   0% {
+      opacity: 1;
+   }
+
+   100% {
+      opacity: 0;
+   }
+}
+
+
+
+
+/* bouton d'acceuil */
 .reservbutton-violet {
 
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
@@ -60,26 +203,92 @@ p {
    gap: 20px;
 
 }
-.reservbutton-violet:hover::after {
-   opacity: 2;
 
+.reservbutton-violet:hover {
+   opacity: 0.8;
+   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
 }
+
 .reservbutton-violet::after {
-background: linear-gradient(0deg, rgba(255, 255,255, 0.15), rgba(255,255,255,0.16,)), linear-gradient(200.64deg, #9356DC -5.3%, #FF79DA 110.74%);
-opacity:0;
+   background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.16, )), linear-gradient(200.64deg, #9356DC -5.3%, #FF79DA 110.74%);
+   opacity: 0;
 }
-.icon-heart {
-height: 30px;
-width: 30px;
-stroke: black;
-fill-opacity: 0%;
-fill: url(gradient);
-position: absolute;
-top: 10px;
-right: 12px;
+
+/* coeur page d'acceuil */
+.acceuil-heart {
+   display: flex;
+   justify-content: center;
+   position: absolute;
+   top: 20px;
+   right: 35px;
+   height: 16px;
+   align-items: center;
 
 }
-.button-news  {
+
+#acceuil-heart-checkbox1,
+#acceuil-heart-checkbox2,
+#acceuil-heart-checkbox3,
+#acceuil-heart-checkbox4 {
+   display: none;
+}
+
+.acceuil-heart .acceuil-full-heart {
+   visibility: hidden;
+   display: none;
+   opacity: 0.5;
+   background: linear-gradient(200.64deg, #9356dc -5.2%, #ff79da 110.74%);
+   background-clip: text;
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent;
+   -moz-background-clip: text;
+   -moz-text-fill-color: transparent;
+   transition: opacity 0.5s;
+   padding: 0;
+}
+
+#acceuil-heart-checkbox1:checked+label>i.acceuil-full-heart,
+#acceuil-heart-checkbox2:checked+label>i.acceuil-full-heart,
+#acceuil-heart-checkbox3:checked+label>i.acceuil-full-heart,
+#acceuil-heart-checkbox4:checked+label>i.acceuil-full-heart {
+   visibility: visible;
+   display: block;
+   animation: acceuilfull 0.5s;
+   opacity: 1;
+}
+
+#acceuil-heart-checkbox1:checked+label>i.acceuil-empty-heart,
+#acceuil-heart-checkbox2:checked+label>i.acceuil-empty-heart,
+#acceuil-heart-checkbox3:checked+label>i.acceuil-empty-heart,
+#acceuil-heart-checkbox4:checked+label>i.acceuil-empty-heart {
+   visibility: hidden;
+   display: none;
+}
+
+
+
+@keyframes acceuilfull {
+   from {
+      opacity: 0.5;
+   }
+
+   to {
+      opacity: 1;
+   }
+}
+
+
+
+#acceuil-heart-checkbox1:checked+label>i.acceuil-full-heart~i.acceuil-empty-heart,
+#acceuil-heart-checkbox2:checked+label>i.acceuil-full-heart~i.acceuil-empty-heart,
+#acceuil-heart-checkbox3:checked+label>i.acceuil-full-heart~i.acceuil-empty-heart,
+#acceuil-heart-checkbox4:checked+label>i.acceuil-full-heart~i.acceuil-empty-heart {
+   display: none;
+}
+
+
+/* bouton news*/
+.button-news {
    background: #99E2D0;
    position: absolute;
    width: 82px;
@@ -95,16 +304,25 @@ right: 12px;
    right: 12%;
 
 }
+
+#acceuil-heart-checkbox1:checked+label>i.acceuil-empty-heart,
+#acceuil-heart-checkbox2:checked+label>i.acceuil-empty-heart,
+#acceuil-heart-checkbox3:checked+label>i.acceuil-empty-heart,
+#acceuil-heart-checkbox4:checked+label>i.acceuil-empty-heart {
+   display: none;
+}
+
 /****** MENU_PAGES RECURENT ***********/
 .navreturn {
    display: flex;
    justify-content: center;
    align-items: center;
 }
+
 .navreturn a {
    position: absolute;
    left: 20px;
-  top:  20px;
+   top: 20px;
 }
 
 
@@ -146,6 +364,7 @@ right: 12px;
 
 .button__icon {
    border: 0;
+   background-color: #EAEAEA;
 }
 
 .button__text {
@@ -208,7 +427,7 @@ right: 12px;
    display: flex;
    flex-direction: column;
    gap: 25px;
-   
+
 }
 
 .fonctionnement__cards__card {
@@ -244,12 +463,12 @@ right: 12px;
 
 
 .fonctionnement__cards__card h3 {
-  display: flex;
+   display: flex;
    padding: 28.59px 20px 28.12px 0px;
-   width: 70%;
+   width: 100%;
    height: 15.67px;
    align-items: center;
-   
+
 }
 
 .fonctionnement__cards__card:hover {
@@ -264,11 +483,15 @@ right: 12px;
 /****** container restaurants ***********/
 .restaurants {
    display: flex;
-   flex-direction: column;   
+   flex-direction: column;
    background-color: var(--gray-color);
    padding: 54px 20px 64px 20px;
    gap: 20px;
 
+}
+.restaurants__title--h2 {
+   background-color: var(--gray-color);
+   
 }
 
 .restaurants__card {
@@ -279,6 +502,10 @@ right: 12px;
    position: relative;
 
 
+}
+
+.restaurants__card a {
+   height: 150px;
 }
 
 .restaurants__cards .card {
@@ -308,6 +535,7 @@ right: 12px;
    padding: 15px;
    filter: drop-shadow(0px 0px 010px rgba(0, 0, 0, 0.1));
    box-sizing: border-box;
+
 }
 
 /****** container footer ***********/
@@ -317,8 +545,8 @@ footer {
    padding: 22px 0 33px 25px;
    background: var(--grey-color);
    color: #FFF;
-   
-   
+
+
 }
 
 footer h2 {
@@ -352,62 +580,435 @@ footer .fa-solid {
    color: white;
    font-weight: 300;
 }
+
 /****** §§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§|||| PAGE OF RESTAURANTS MENU ||||§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§ ***********/
 /****** IMAGES MENU BACKGROUND ***********/
 .background--menu {
    width: 100%;
    height: 275px;
    object-fit: cover;
-   position: relative;
-   z-index: 1;
-   }
-   /****** MENUS ENTREESS PLATS DESERTS ***********/
-   .menu {
-      width: 100%;
-      background: #f7f7f7;
-      border-radius: 45px 45px 0px 0px;
-      display: flex;
-      flex-direction: column;
-      margin-top: -40px;
-      position: absolute;
-      z-index: 2;
 
-   }
-   .menu__title {
+}
+
+/****** MENUS ENTREESS PLATS DESERTS ***********/
+.menu {
+   width: 100%;
+   background: #f7f7f7;
+   border-radius: 45px 45px 0px 0px;
+   display: flex;
+   flex-direction: column;
+   margin-top: -40px;
+   position: relative;
+
+
+}
+
+/****** Gestion des slides de menus***********/
+.entree.test {
+   opacity: 0;
+   animation: menu-display 1s 0.5s forwards ease-out;
+}
+
+.plats.test {
+   animation: menu-display 1s 1s forwards ease-out;
+}
+
+.desserts.test {
+   animation: menu-display 1s 1.5s forwards ease-out;
+}
+
+/* .seccards {
       display: flex;
-      align-items: center;
-      padding-top: 32px;
-      gap: 24px;
+   align-items: center;
+   justify-content: center;
+   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+   background: #F7F7F7;
+   border-radius: 20px;
+   gap: 23px;
+   position: relative;
    }
+   */
+.menu__title {
+   display: flex;
+   padding-top: 32px;
+   flex-direction: column;
+   padding-left: 10px;
+   margin-bottom: 15px;
+}
+
 .menu h1 {
    font-family: shrikhand;
    font-size: 28px;
    font-weight: 400;
    padding-left: 17px;
 }
+
 .menu__title h2 {
-   font-size: 16px;   
+   font-size: 16px;
    font-weight: 300;
-   padding-bottom: 5px;
-   margin-bottom: 12px;
-   border-bottom: 3px solid #99E2D0;
    width: 40%;
+}
+
+.menu__title .title-line {
+   width: 30px;
+   height: 3px;
+   background-color: #99E2D0;
 
 }
+
 .section__menu__cards {
    display: flex;
+   justify-content: center;
    flex-direction: column;
-   gap: 14px;
-}
-.section__menu__cards .card {
-   flex-direction: row;
-   justify-content: space-between;
-   overflow: hidden;
+   padding-left: 10px;
+   padding-right: 10px;
+   width: 100%;
+   gap: 20px;
+
+
+
+
 
 }
-.section__menu__cards .card .card-content {
-   min-width: 70%;
+
+/****** gestion des checkmark animées ***********/
+
+.menu__entree {
+   display: flex;
+   flex-direction: column;
+   gap: 20px;
+   margin-top: 5rem;
+   animation: menu-display 1s;
+   width: 90%;
+   padding-left: 15px;
+   padding-right: 15px;
+
+
 }
+
+.dish {
+   width: 100%px;
+   height: 80px;
+   box-shadow: 1px 1px 1px 1px gray;
+   background: #ffff;
+   border-radius: 10px;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   overflow: hidden;
+   position: relative;
+   padding: 10px;
+}
+
 .price {
-   font-weight: 700;
+   transition: all 0.5s;
 }
+
+.dish:hover .price {
+   transform: translateX(-80px);
+}
+
+.yolo {
+   width: 90%;
+   transition: all 0.6s;
+}
+
+.yolo h3 {
+   text-overflow: ellipsis;
+   white-space: nowrap;
+   overflow: hidden;
+}
+
+.yolo p {
+   text-overflow: ellipsis;
+   white-space: nowrap;
+   overflow: hidden;
+}
+
+.dish:hover .yolo {
+   width: 70%;
+}
+
+.dish:hover .checkmark {
+   width: 80px;
+   font-size: 16px;
+}
+
+.checkmark {
+   position: absolute;
+   right: 0px;
+   height: 100%;
+   background-color: #99E2D0;
+   width: 0px;
+   transition: all 0.5s;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   font-size: 0px;
+}
+.checkmark i {
+   color: #f7f7f7;
+}
+
+@keyframes menu-display {
+   0% {
+      opacity: 0;
+      transform: translateY(-20%);
+   }
+
+   100% {
+      opacity: 1;
+      transform: translateY(0%);
+   }
+}
+
+
+.container__btn {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   padding-bottom: 20px;
+}
+
+.btn__pageversion {
+
+   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+   display: inline-block;
+   padding: 10px 20px;
+   background: linear-gradient(200.64deg, #9356DC -4.4%, #FF79DA);
+   border-radius: 25px;
+   color: #FFF;
+   text-align: center;
+   text-decoration: none;
+   width: 186px;
+   height: 50px;
+   font-size: 16px;
+   font-weight: 500;
+   gap: 20px;
+}
+
+.btn__pageversion:hover {
+   opacity: 0.8;
+   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+/****** Animation  heart ***********/
+.main-container-heart {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   position: relative;
+   left: 260px;
+   top: -35px;
+   width: 20%;
+
+
+}
+
+#heart-checkbox {
+   display: none;
+   
+}
+
+.full-heart {
+   display: none;
+   opacity: 0.5;
+   background: linear-gradient(200.64deg, #9356dc -5.2%, #ff79da 110.74%);
+   background-clip: text;
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent;
+   -moz-background-clip: text;
+   -moz-text-fill-color: transparent;
+}
+
+#heart-checkbox:checked+label>i.full-heart {
+   display: inline-block;
+   animation: full 0.5s;
+   opacity: 1;
+}
+
+@keyframes full {
+   from {
+      opacity: 0.5;
+   }
+
+   to {
+      opacity: 1;
+   }
+}
+
+#heart-checkbox:checked+label>i.empty-heart {
+   display: none;
+}
+
+/********************** Media queries*************************************/
+/***page d'acceuil ************/
+
+@media screen and (min-width: 600px) and (max-width: 2400px) {
+
+   .reservation__title--h2 h {
+      font-size: 18px;
+
+   }
+
+   .reservbutton-violet {
+      font-size: 16px;
+      width: 218px;
+      height: 50px;
+      font-size: 15px;
+      text-align: center;
+
+   }
+
+   .fonctionnement__cards {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      gap: 25px;
+      height: 49px;
+      width: 100%;
+      text-align: center;
+      font-size: 14px;
+      white-space: nowrap;
+
+
+   }
+
+   .foncctionnement__cards h3 {
+      font-size: 8px;
+      width: 100%;
+
+
+   }
+   .fonctionnement {
+      width: 100%;
+   }
+   
+   .fonctionnement__cards__card span {
+      background: #9356DC;
+      border-radius: 100%;
+      width: 24px;
+      height: 24px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #F6F6F6;
+      font-size: 14.18px;
+      position: absolute;
+      top: 30%;
+      left: -19px;
+   }
+
+
+
+   .fa-solid,
+   .fas {
+      font-weight: 900;
+      padding-left: 20px;
+   }
+
+   .restaurants__title--h2 {
+      display: flex;
+      justify-content:left;
+      flex-direction: row;
+      padding-bottom: 0px;
+      padding-left: 30px;
+      padding-top: 0;
+      padding-right: 0;      
+      font-size: 16px;
+      width: 100%
+   }
+
+   .restaurants {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 251px 251px;
+      grid-gap: 20px;
+      padding-top: 30px;
+
+
+   }
+   .main-container-heart {
+      left: 260px;
+   }
+.menu {
+   width: 85%;
+   justify-content: center;
+   left: 55px;
+   
+   
+   
+}
+.menu__title {
+   width: 90%;
+   padding-left: 60px;
+}
+.dish {
+   width: 100%;
+   
+}
+.menu-full {
+   justify-content: center;
+   
+}
+.entree.test {
+   justify-content: center;
+}
+.section__menu__cards {
+   left: 20px;
+   padding-left: 60px;
+   padding-right: 60px;
+   
+}
+
+   footer h2 {
+      display: flex;
+      justify-content: flex-end;
+      padding-right: 30px;
+      font-family: shrikhand;
+      font-weight: 400;
+      font-size: 18px;
+      
+
+   }
+   footer .footer__text {
+      display: flex;
+      flex-direction: row;
+      gap: 7px;
+      justify-content: flex-end;
+      padding-right: 20px;
+  }
+  
+
+footer .fa-solid {
+    position: relative;
+    right: -5px;
+    padding-left: 0px;
+
+    
+}
+
+
+.icon__text p {
+    padding-left: 0px;
+    gap: 0px;
+}
+
+   .footer {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+      }
+      p {
+         font-weight: 500;
+         font-size: 12px;
+      }
+   
+element.style {
+}
+.footer__text a {
+    color: white;
+    font-weight: 500;
+    font-size: 12px;
+}
+   }
