--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -489,6 +489,7 @@ p {
    background-color: var(--gray-color);
    padding: 54px 20px 64px 20px;
    gap: 20px;
+   width:100%;
 
 }
 
@@ -506,7 +507,7 @@ p {
    margin-top: 30px;
    gap: 0px;
    position: relative;
-   width: auto;
+  
 
 
 }
@@ -945,6 +946,7 @@ footer .fa-solid {
       grid-template-rows: 251px 251px;
       grid-gap: 20px;
       padding-top: 30px;
+      width: auto;
 
 
    }
